added excel report

--- a/PdfReportExample/Views/PdfReport/Index.cshtml
+++ b/PdfReportExample/Views/PdfReport/Index.cshtml
@@ -7,6 +7,10 @@
 <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 <h1>Index</h1>
 
-<a class="btn btn-success" href="/PdfReport/StaticPdfReport/">Rapor Al</a>
+<a class="btn btn-dark" href="/PdfReport/StaticPdfReport/">Rapor Al</a>
 <br />
-<a class="btn btn-success" href="/PdfReport/StaticCustomerReport/">Rapor Al2</a>
+<br />
+<a class="btn btn-primary" href="/PdfReport/StaticCustomerReport/">Rapor Al2</a>
+<br />
+<br />
+<a class="btn btn-success" href="/ExcelReportsController/CustomerExcelReport/">Excel Raporu Al</a>
